added about us and changed services pages

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,8 +27,23 @@ https://static.pexels.com/photos/36487/above-adventure-aerial-air.jpg
 		</div>
 		<!-- End Section 1 -->
 
+		<!-- Start Section 2 -->
+		<div id="section2">
 
-		<h2 id='construction'>Under Construction</h2>
+			<h2 style="text-align: left">About Us</h2>
+			<p>
+				<span>M</span>arquee <span>P</span>artners believes that anyone can live the life they have dreamed of, if they obtain the necessary level of intelligence. It is through our philosophy we have impacted approximately 10,000 individuals in lifestyle intelligence coaching.
+
+				<br>
+				<br>
+
+				For over 20 years, our team has positioned corporations, small businesses, and non-profit organizations as local, national, and global leaders. Our team expertise stems from executive careers with Fortune 500 companies and nonprofits. We advise organizations in the areas of financial management, business management, brand management, and corporate social responsibility. 
+
+			</p>
+
+		</div>
+		<!-- End Section 2 -->
+
 
 		<!-- Start Section 6 -->
 		<div id="section6">
