--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
 
 		<!-- Start Section 2 -->
 		<div id="section2">
+
 			<h2>What we do</h2>
 			<p>
-				<span>M</span>arquee <span>P</span>artners is a boutique agency delivering premier lifestyle management services to professionals, athletes and entertainers. We have an unwavering belief in providing the best resources to our clients that will enrich their lives. 
-				<br>
-				<!-- <span>M</span>arquee <span>P</span>artners provides services in the following areas: -->
+				<span>M</span>arquee <span>P</span>artners provides premier consultant management services to corporate professionals, business owners, athletes and entertainers. We have an unwavering belief in providing the best resources to our clients that will enrich their lives.
+				
 			</p>
+			<br>
+			<br>
+			<p>
+				<span>M</span>arquee <span>P</span>artners consulting services include <i>Lifestyle Management</i>, <i>Business Management</i>, <i>Nonprofit Management</i>, and <i>Brand Management</i>. We develop deep relationships with our clients to assist them in making informed financial decisions about managing their businesses and personal lifestyles. We support clients in each stage of their life and business.
+				<br>
+			</p>
+
 		</div>
 		<!-- End Section 2 -->
 
@@ -104,7 +111,7 @@
 		<!-- End Section 6 -->
 
 		<!-- Start Section 7 -->
-		<div id="section7" style="padding: 2em 0 2em 0;">
+		<div id="section7">
 			<p>This is <span>M</span>arquee <span>P</span>artners, LLC</p>
 			<p>Site developer - <a href="http://www.joshmatos.black">Josh Matos</a></p>
 		</div>
@@ -124,6 +131,6 @@
 
 
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="logic.js" ></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
+	<!-- <script type="text/javascript" src="logic.js" ></script> -->
 </html>
