--- a/services.html
+++ b/services.html
@@ -29,13 +29,13 @@
 		<!-- Start Section 3 -->
 		<div id="section3">
 			<div class="imgContainer">
-				<img src="https://static.pexels.com/photos/159108/light-lamp-electricity-power-159108.jpeg">
+				<img src="https://static.pexels.com/photos/5162/businessman-fashion-man-person.jpg">
 			</div>
 			<div class="contentContainer">
 				<div class="content">
 					<i class="material-icons">lightbulb_outline</i>
 					<h2>Lifestyle Intelligence</h2>
-					<p>Lifestyle planning and coaching strategies to meet life goals
+					<p>Everyone has a unique lifestyle they are striving to obtain or maintain. We listen to your life aspirations and coach you to make smart financial decisions to meet your goals. We support you during each stage of your financial life: establishing, growing and legacy.
 					</p>
 				</div>
 			</div>
@@ -45,13 +45,13 @@
 		<!-- Start Section 4 -->
 		<div id="section4">
 			<div class="imgContainer">
-				<img src="https://static.pexels.com/photos/25970/pexels-photo.jpg">
+				<img src="https://static.pexels.com/photos/66862/calculator-paperclip-pen-office-66862.jpeg">
 			</div>
 			<div class="contentContainer">
 				<div class="content">
 					<i class="material-icons">attach_money</i>
 					<h2>Business Management</h2>
-					<p>Consultation to maximize business revenue and outcomes
+					<p>Your business needs are critical to manage daily operations for your clients. With the forever changing economic environment, we provide planning strategies and solutions to help you maximize revenues and minimize risks.
 					</p>
 				</div>
 			</div>
@@ -61,18 +61,36 @@
 		<!-- Start Section 5 -->
 		<div id="section5">
 			<div class="imgContainer">
-				<img src="https://static.pexels.com/photos/59876/sand-reprint-feet-sole-59876.jpeg">
+				<img src="https://static.pexels.com/photos/24677/pexels-photo-24677.jpg">
 			</div>
 			<div class="contentContainer">
 				<div class="content">
 					<i class="material-icons">fingerprint</i>
 					<h2>Nonprofit Management</h2>
-					<p>Consultation to establish, managing and growing entities
+					<p>Making a difference in the world is not an easy task. Your organization require strong resources to carry out its mission. We empower you with effective managing techniques that ensure growth and sustainability.
 					</p>
 				</div>
 			</div>
 		</div>
 		<!-- End Section 5 -->
+
+		<!-- Start Section 4 -->
+		<!-- Developer Note: Client added new section later into the project and for the sake of not renaming all further sections, I decided to copy the format needed to fill the new section -->
+
+		<div id="section4">
+			<div class="imgContainer">
+				<img src="https://static.pexels.com/photos/59197/pexels-photo-59197.jpeg">
+			</div>
+			<div class="contentContainer">
+				<div class="content">
+					<i class="material-icons">face</i>
+					<h2>Brand Management</h2>
+					<p>Your brand is everything; whether personal or business. In increasingly competitive markets, we position you as a leader through innovative marketing and branding designs.
+					</p>
+				</div>
+			</div>
+		</div>
+		<!-- End Section 4 -->
 
 		<!-- Start Section 6 -->
 		<div id="section6">
