added portrait img space and brand space

--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<!-- This image is outside of normal layout and will serve as a full page background image behind all the other sections-->
-	<img src="https://static.pexels.com/photos/289706/pexels-photo-289706.jpeg" id="background-image">
+	<img src="https://static.pexels.com/photos/169647/pexels-photo-169647.jpeg" id="background-image">
 
 	<!-- This holds the body of the page -->
 	<div id="pageContainer">
@@ -123,7 +123,7 @@
 		<div id="menuButtons">
 			<a href="index.html"><span>Home</span></a>
 			<a href=""><span>Services</span></a>
-			<a href="aboutUs.html"><span>About Us</span></a>
+			<a href="aboutUs2.html"><span>About Us</span></a>
 			<a href="contact.html"><span>Contact Us</span>
 		</div></a>
 	</div>
