--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 		<div id="menuButtons">
 			<a href="index.html"><span>Home</span></a>
 			<a href="services.html"><span>Services</span></a>
-			<a href="aboutUs.html"><span>About Us</span></a>
+			<a href="aboutUs2.html"><span>About Us</span></a>
 			<a href="contact.html"><span>Contact Us</span>
 		</div></a>
 	</div>
