alternate services page

--- a/aboutUs2.html
+++ b/aboutUs2.html
@@ -111,8 +111,8 @@ https://static.pexels.com/photos/36487/above-adventure-aerial-air.jpg
 	<div id="menu">
 		<div id="menuButtons">
 			<a href="index.html"><span>Home</span></a>
-			<a href="services.html"><span>Services</span></a>
-			<a href="aboutUs.html"><span>About Us</span></a>
+			<a href="services2.html"><span>Services</span></a>
+			<a href=""><span>About Us</span></a>
 			<a href="contact.html"><span>Contact Us</span>
 		</div></a>
 	</div>
