--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,9 @@
 	<div id="menu">
 		<div id="menuButtons">
 			<a href="index.html"><span>Home</span></a>
-			<a href="services.html"><span>Services</span></a>
+			<a href="services2.html"><span>Services</span></a>
 			<a href="aboutUs2.html"><span>About Us</span></a>
-			<a href="contact.html"><span>Contact Us</span>
+			<a href=""><span>Contact Us</span>
 		</div></a>
 	</div>
 
