--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<br>
 			<br>
 			<p>
-				<span>M</span>arquee <span>P</span>artners consulting services include <i>Lifestyle Management</i>, <i>Business Management</i>, <i>Nonprofit Management</i>, and <i>Brand Management</i>. We develop deep relationships with our clients to assist them in making informed financial decisions about managing their businesses and personal lifestyles. We support clients in each stage of their life and business.
+				<span>M</span>arquee <span>P</span>artners consulting services include <italics>Lifestyle Management</italics>, <italics>Business Management</italics>, <italics>Nonprofit Management</italics>, and <italics>Brand Management</italics>. We develop deep relationships with our clients to assist them in making informed financial decisions about managing their businesses and personal lifestyles. We support clients in each stage of their life and business.
 				<br>
 			</p>
 
@@ -122,8 +122,8 @@
 
 	<div id="menu">
 		<div id="menuButtons">
-			<a href="index.html"><span>Home</span></a>
-			<a href="services.html"><span>Services</span></a>
+			<a href=""><span>Home</span></a>
+			<a href="services2.html"><span>Services</span></a>
 			<a href="aboutUs2.html"><span>About Us</span></a>
 			<a href="contact.html"><span>Contact Us</span>
 		</div></a>
