--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 		<!-- End Section 1 -->
 
 		<!-- Start Section 7 -->
-		<div id="section7" style="padding: 2em 0 2em 0;">
+		<div id="section7">
 			<p>This is <span>M</span>arquee <span>P</span>artners, LLC</p>
 			<p>Site developer - <a href="http://www.joshmatos.black">Josh Matos</a></p>
 		</div>
